# circuit-tracer

./: .gitignore  pyproject.toml
circuit_tracer/: graph.py
demos/: attribute_demo.ipynb
demos/graph_files/: graph-metadata.json
experiments/: OPTUNA_README.md  algorithm1.py  create_graph_files_ea.py  ea.ipynb  ea.py  evaluator.py  graph.ipynb  individual.py  main.ipynb  models.py  optuna_hp_optimization.ipynb  optuna_hp_search.py
experiments/graph_files/: dallas_ea.json  graph-metadata.json  war_ea.json
