[project]
name = "circuit-tracer"
version = "0.1.0"
description = "Library for circuit tracing in language models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.0",
    "huggingface_hub>=0.26.0",
    "ipykernel>=6.29.5,<7.0.0",
    "ipywidgets>=8.1.7",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "safetensors>=0.5.0",
    "tokenizers>=0.21.0",
    "torch>=2.0.0",
    "tqdm>=4.60.0",
    "transformer-lens>=v2.16.0",
    "transformers>=4.50.0",
    "matplotlib==3.10.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.12.7", "pyright>=1.1.403", "ipython>=8.37.0"]

[project.scripts]
circuit-tracer = "circuit_tracer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
exclude = ["*.ipynb", "demos"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "TID", # flake8-tidy-imports (includes TID251 for banned-api)
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Union".msg = "Use `|` instead"
"typing.Optional".msg = "Use `| None` instead"
"typing.Dict".msg = "Use `dict` instead"
"typing.Tuple".msg = "Use `tuple` instead"
"typing.List".msg = "Use `list` instead"

[tool.pyright]
typeCheckingMode = "basic"
exclude = ["**/node_modules", "**/__pycache__", "**/.*", "demos"]
